--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -29,7 +29,7 @@ jobs:
           registry-url: https://npm.pkg.github.com/
       - run: git config --global user.email "dev@liveobjects.ai"
       - run: git config --global user.name "liveObjects"
-      - run: npm version minor
+      - run: npm version patch
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
