--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nodejs-license-file": "^4.0.0",
     "path": "^0.12.7",
     "request": "^2.88.2",
+    "typescript": "^3.9.7",
     "winston": "^3.2.1",
     "x-xss-protection": "^1.3.0"
   },
