--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "lint": "eslint **/*.js"
+    "lint": "eslint **/*.js",
+    "build": "tsc"
   },
   "author": "",
   "license": "see license in LICENSE.txt",
@@ -23,6 +24,11 @@
     }
   },
   "dependencies": {
+    "@types/express": "^4.17.7",
+    "@types/http-proxy": "^1.17.4",
+    "@types/node": "^14.0.27",
+    "@types/nodejs-license-file": "^4.0.0",
+    "@types/request": "^2.48.5",
     "api-express-exporter": "^1.0.0",
     "axios": "^0.19.2",
     "bluebird": "^3.7.2",
