--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "registry": "https://npm.pkg.github.com/"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test.js",
     "start": "node server.js",
     "lint": "eslint **/*.js",
     "build": "tsc"
