--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "noImplicitAny": true,
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "./dist"
   },
-  "include": ["src/server/**/*", "src/helmet.ts"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules/"]
 }
